・ヘルプファイルのパス指定誤りの修正 ・バージョン情報に翻訳者名を入れるようにした。

--- a/help/ja-jp/contents/01.html
+++ b/help/ja-jp/contents/01.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <!--
-Re-Metrics (C) 2012-2020 Tatsuhiko Shoji
+Re-Metrics (C) 2012-2017,2020 Tatsuhiko Shoji
 The sources for Re-Metrics are distributed under the MIT open source license
 -->
 <html>
@@ -9,7 +9,7 @@ The sources for Re-Metrics are distributed under the MIT open source license
 <meta http-equiv="content-script-type" content="text/javascript">
 <meta http-equiv="content-style-type" content="text/css">
 <link rel="stylesheet" href="ReMetrics.css">
-<title>1.始めに</title>
+<title>1.Getting started</title>
 <link rev=made href="mailto:rxk16664@nifty.ne.jp">
 <link rel="Index" href="Frame.ReMetrics.html">
 <link rel="First" href="01.html">
@@ -17,26 +17,20 @@ The sources for Re-Metrics are distributed under the MIT open source license
 <link rel="Next" href="02.html">
 </head>
 <body>
-<h1>1.始めに</h1>
+<h1>1.Getting started</h1>
 
 <div class="chapter">
-<h2>1.1 本ソフトは何か?</h2>
+<h2>1.1 What's this?</h2>
 <p>
-　本ソフトはWindows 8/8.1/10でウインドウの各部分の幅・太さ、デスクトップアイコンの間隔を設定するツールです。<br>
-　なぜかWindows 8/8.1/10では標準でウインドウの各部分の幅・太さ、デスクトップアイコンの間隔を設定することができなくなっていたので作成しました。<br>
+This program sets window settings on Windows 8.1/10.<br>
 </p>
 </div>
 
 <div class="chapter">
-<h2>1.2 動作環境</h2>
+<h2>1.2 Target OS</h2>
 <p>
-　本プログラムはWindows Vista/7/8/8.1/10で動作します。<br>
-　デスクトップに表示されたウインドウの各部分の幅・太さ、デスクトップアイコンの間隔を設定するのでデスクトップアプリです。<br>
+This program runs on Windows 8,8.1 and 10.<br>
 </p>
-<p>
-　Windows Vistaから7では「画面のプロパティ」(Windows 2000)、「デザインの詳細」(Windows XP)、「デザインの設定」(Windows Vista)、「ウインドウの色とデザイン」(Windows 7)、でウインドウの各部分の幅・太さを設定できますが、幅と太さを個別に設定できますので意味があるかもしれません。<br>
-</p>
-<!-- やってること一緒なのにダイアログ名全部違うんかい! -->
 </div>
 
 <div class="chapter">
@@ -45,22 +39,19 @@ The sources for Re-Metrics are distributed under the MIT open source license
 <table border="1">
 <tbody>
 <tr>
-<th>ファイル名</th><th>内容</th>
+<th>File name</th><th>Contents</th>
 </tr>
 <tr>
-<td>ReMetrics.exe</td><td>本ソフトの実行ファイルです。</td>
+<td>ReMetrics.exe</td><td>Program file</td>
 </tr>
 <tr>
-<td>ReMetrics.html</td><td>本ソフトのドキュメントファイルのインデックスです。</td>
+<td>*.lng</td><td>Language file.</td>
 </tr>
 <tr>
-<td>*.html,*.css</td><td>本ソフトのドキュメントの中身です。</td>
+<td>*.chm</td><td>Help file.</td>
 </tr>
 <tr>
-<td>*.PNG</td><td>本ソフトのドキュメント用画像です。</td>
-</tr>
-<tr>
-<td>src.zip</td><td>本ソフトのソースファイルです。</td>
+<td>src.zip</td><td>Source files.</td>
 </tr>
 
 </tbody>
@@ -68,16 +59,15 @@ The sources for Re-Metrics are distributed under the MIT open source license
 </div>
 
 <div class="chapter">
-<h2>1.4 インストール・アンインストール</h2>
-<h3>インストール</h3>
+<h2>1.4 Installation</h2>
+<h3>Install</h3>
 <p>
-　インストールする際は本ソフトのアーカイブの内容を全部同じディレクトリに展開してください。<br>
+Extruct all files in same folder.<br>
 </p>
 
-<h3>アンインストール</h3>
+<h3>Uninstall</h3>
 <p>
-　アンインストールを行う際は本ソフトを展開したディレクトリごと消してください。<br>
-事前にプリセットの設定を使ってウインドウの各部分の幅・高さ、アイコンの間隔を元に戻してからプログラムを削除する方がよいでしょう。<br>
+Delete all files.<br>
 </p>
 </div>
 
