--- a/help/ja-jp/contents/03.html
+++ b/help/ja-jp/contents/03.html
@@ -21,6 +21,17 @@ The sources for Re-Metrics are distributed under the MIT open source license
 <h1>3.製作履歴</h1>
 
 <div class="chapter">
+<h2>2020/05/04 Version 1.30</h2>
+<h3>機能追加</h3>
+<ul>
+<li>プログラムの表示文言を言語ファイルから読み込むようにしました。</li>
+<li>各言語の文言やフォントに対応するためコントロールのサイズを変更しました。</li>
+<li>Windows Vista以降対応なので、日本語版のフォントをメイリオにしました。</li>
+<li>カレントディレクトリの設定ファイルを読み込めない不具合を修正しました。</li>
+</ul>
+</div>
+
+<div class="chapter">
 <h2>2017/06/29 Version 1.20</h2>
 <h3>機能追加</h3>
 <ul>
