--- a/help/en-us/contents/02.html
+++ b/help/en-us/contents/02.html
@@ -5,7 +5,7 @@ The sources for Re-Metrics are distributed under the MIT open source license
 -->
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=Shift_JIS">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="content-script-type" content="text/javascript">
 <meta http-equiv="content-style-type" content="text/css">
 <link rel="stylesheet" href="ReMetrics.css">
@@ -149,7 +149,7 @@ Height of icon spacing.<br>
 </li>
 </ul>
 <p>
-Icon horizontal spacing and icon vertical spacing are enabled after &quot;&quot; or &quot;&quot;.<br>
+Icon horizontal spacing and icon vertical spacing are enabled after &quot;Auto arrange icons&quot; or &quot;Align icons to grid&quot;.<br>
 </p>
 
 </div>
