--- a/help/en-us/contents/03.html
+++ b/help/en-us/contents/03.html
@@ -21,6 +21,16 @@ The sources for Re-Metrics are distributed under the MIT open source license
 <h1>3.History</h1>
 
 <div class="chapter">
+<h2>07/18/2020 Version 1.31</h2>
+<h3>Bug fix</h3>
+<ul>
+<li>When DPI is high, some controls are hidden.</li>
+<li>Font is changed to Segoe UI because font size is too small when in high DPI.</li>
+<li>Version number didn't displayed.</li>
+</ul>
+</div>
+
+<div class="chapter">
 <h2>05/04/2020 Version 1.30</h2>
 <h3>Enhancement</h3>
 <ul>
