Windows 10 Version 20H2対応
・Windows 10 Version 20H2の新しいバージョン表記に対応した。
・バージョン番号を1.32とした。
・ヘルプファイルの更新

--- a/help/en-us/contents/03.html
+++ b/help/en-us/contents/03.html
@@ -21,6 +21,14 @@ The sources for Re-Metrics are distributed under the MIT open source license
 <h1>3.History</h1>
 
 <div class="chapter">
+<h2>11/21/2020 Version 1.32</h2>
+<h3>Enhancement</h3>
+<ul>
+<li>Show new format version name for Windows 10 20H2.</li>
+</ul>
+</div>
+
+<div class="chapter">
 <h2>07/18/2020 Version 1.31</h2>
 <h3>Bug fix</h3>
 <ul>
