--- a/help/ja-jp/contents/03.html
+++ b/help/ja-jp/contents/03.html
@@ -21,10 +21,18 @@ The sources for Re-Metrics are distributed under the MIT open source license
 <h1>3.製作履歴</h1>
 
 <div class="chapter">
+<h2>2020/11/21 Version 1.32</h2>
+<h3>非機能変更</h3>
+<ul>
+<li>Windows 10 Version 20H2の新しいフォーマットのバージョン表記に対応しました。</li>
+</ul>
+</div>
+
+<div class="chapter">
 <h2>2020/07/18 Version 1.31</h2>
 <h3>不具合修正</h3>
 <ul>
-<li>高DPI環境で画面表示が崩れる不具合を修正しました。。</li>
+<li>高DPI環境で画面表示が崩れる不具合を修正しました。</li>
 <li>バージョン情報にバージョン番号の表示が抜けていた不具合を修正しました。</li>
 <li>英語版のフォントをSegoe UIにしました。</li>
 </ul>
