--- a/help/en-us/contents/02.html
+++ b/help/en-us/contents/02.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-Re-Metrics (C) 2012-2017,2020 Tatsuhiko Shoji
+Re-Metrics (C) 2012-2017,2020,2021 Tatsuhiko Shoji
 The sources for Re-Metrics are distributed under the MIT open source license
 -->
 <html>
@@ -79,6 +79,7 @@ You can choose window settings each Windows.<br>
 <li>Windows 7</li>
 <li>Windows 8/8.1</li>
 <li>Windows 10</li>
+<li>Windows 11</li>
 </ul>
 </li>
 <li>Tols<br>
