--- a/help/en-us/contents/03.html
+++ b/help/en-us/contents/03.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <!--
-Re-Metrics (C) 2012-2017,2020 Tatsuhiko Shoji
+Re-Metrics (C) 2012-2017,2020,2021 Tatsuhiko Shoji
 The sources for Re-Metrics are distributed under the MIT open source license
 -->
 <html>
@@ -19,6 +19,15 @@ The sources for Re-Metrics are distributed under the MIT open source license
 </head>
 <body>
 <h1>3.History</h1>
+
+<div class="chapter">
+<h2>11/14/2021 Version 1.33</h2>
+<h3>Enhancement</h3>
+<ul>
+<li>Show Windows 11 version information.</li>
+<li>Add Windows 11 presets.</li>
+</ul>
+</div>
 
 <div class="chapter">
 <h2>11/21/2020 Version 1.32</h2>
