--- a/help/ja-jp/contents/01.html
+++ b/help/ja-jp/contents/01.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <!--
-Re-Metrics (C) 2012-2017,2020 Tatsuhiko Shoji
+Re-Metrics (C) 2012-2017,2020,2021 Tatsuhiko Shoji
 The sources for Re-Metrics are distributed under the MIT open source license
 -->
 <html>
@@ -20,16 +20,18 @@ The sources for Re-Metrics are distributed under the MIT open source license
 <h1>1.Getting started</h1>
 
 <div class="chapter">
-<h2>1.1 What's this?</h2>
+<h2>1.1 このプログラムについて</h2>
 <p>
-This program sets window settings on Windows 8.1/10.<br>
+このプログラムはWindows 8.1/10/11でタイトルバーの高さなどウインドウ幅の設定を行うツールです。<br>
+Windows 8.1でなぜかタイトルバーの高さなどウインドウ幅の設定を行う機能がなくなったので作成しました。<br>
 </p>
 </div>
 
 <div class="chapter">
 <h2>1.2 Target OS</h2>
 <p>
-This program runs on Windows 8,8.1 and 10.<br>
+このプログラムはWindows 8.1/10/11で動作します。<br>
+Windows Vsita/7でも動作しますが、意味はありません(もともと機能がある)。<br>
 </p>
 </div>
 
@@ -59,15 +61,15 @@ This program runs on Windows 8,8.1 and 10.<br>
 </div>
 
 <div class="chapter">
-<h2>1.4 Installation</h2>
-<h3>Install</h3>
+<h2>1.4 インストール・アンインストール</h2>
+<h3>インストール</h3>
 <p>
-Extruct all files in same folder.<br>
+１つのフォルダにすべてのファイルを展開してください。<br>
 </p>
 
-<h3>Uninstall</h3>
+<h3>アンインストール</h3>
 <p>
-Delete all files.<br>
+すべてのファイルを削除してください。<br>
 </p>
 </div>
 
