--- a/help/ja-jp/contents/03.html
+++ b/help/ja-jp/contents/03.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <!--
-Re-Metrics (C) 2012-2020 Tatsuhiko Shoji
+Re-Metrics (C) 2012-2021 Tatsuhiko Shoji
 The sources for Re-Metrics are distributed under the MIT open source license
 -->
 <html>
@@ -19,6 +19,19 @@ The sources for Re-Metrics are distributed under the MIT open source license
 </head>
 <body>
 <h1>3.製作履歴</h1>
+
+<div class="chapter">
+<h2>2021/11/14 Version 1.33</h2>
+<h3>機能追加</h3>
+<ul>
+<li>Windows 11のプリセットを追加しました。</li>
+</ul>
+
+<h3>非機能変更</h3>
+<ul>
+<li>Windows 11のバージョン表記に対応しました。</li>
+</ul>
+</div>
 
 <div class="chapter">
 <h2>2020/11/21 Version 1.32</h2>
