--- a/help/en-us/contents/01.html
+++ b/help/en-us/contents/01.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <!--
-Re-Metrics (C) 2012-2017,2020 Tatsuhiko Shoji
+Re-Metrics (C) 2012-2017,2020.2021 Tatsuhiko Shoji
 The sources for Re-Metrics are distributed under the MIT open source license
 -->
 <html>
@@ -22,14 +22,14 @@ The sources for Re-Metrics are distributed under the MIT open source license
 <div class="chapter">
 <h2>1.1 What's this?</h2>
 <p>
-This program sets window settings on Windows 8.1/10.<br>
+This program sets window settings on Windows 8.1/10/11.<br>
 </p>
 </div>
 
 <div class="chapter">
 <h2>1.2 Target OS</h2>
 <p>
-This program runs on Windows 8,8.1 and 10.<br>
+This program runs on Windows 8,8.1 and 10/11.<br>
 </p>
 </div>
 
