--- a/help/ja-jp/contents/02.html
+++ b/help/ja-jp/contents/02.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-Re-Metrics (C) 2012-2020 Tatsuhiko Shoji
+Re-Metrics (C) 2012-2021 Tatsuhiko Shoji
 The sources for Re-Metrics are distributed under the MIT open source license
 -->
 <html>
@@ -81,6 +81,7 @@ The sources for Re-Metrics are distributed under the MIT open source license
 <li>Windows 7</li>
 <li>Windows 8/8.1</li>
 <li>Windows 10</li>
+<li>Windows 11</li>
 </ul>
 </li>
 <li>ÉcÅ[Éã(T)<br>
