--- a/help/en-us/contents/04.html
+++ b/help/en-us/contents/04.html
@@ -45,7 +45,16 @@ My Web page <a href="http://tatsu.life.coocan.jp/index.html">http://tatsu.life.c
 <th>Language</th><th>Author</th>
 </tr>
 <tr>
-<td>Japanese, English</td><td>Tatsu</td>
+<td>Japanese</td><td>Tatsu</td>
+</tr>
+<tr>
+<td>English</td><td>Tatsu,GodGun968</td>
+</tr>
+<tr>
+<td>Korean</td><td>Josh Kim</td>
+</tr>
+<tr>
+<td>Simplified Chinese</td><td>,GodGun968</td>
 </tr>
 </table>
 </div>
