--- a/help/ja-jp/contents/04.html
+++ b/help/ja-jp/contents/04.html
@@ -42,10 +42,32 @@ The sources for Re-Metrics are distributed under the MIT open source license
 <h2>作者</h2>
 <address>
 庄子 達彦(Tatsu)<br>
-E-mail Address <a href="mailto:rxk16664@nifty.ne.jp">rxk16664@nifty.ne.jp</a><br>
+E-mail Address <a href="mailto:tatsu_syo@nifty.com">tatsu_syo@nifty.com</a><br>
 My Web page <a href="http://tatsu.life.coocan.jp/index.html">http://tatsu.life.coocan.jp/index.html</a><br>
 </address>
 </div>
+
+<div class="chapter">
+<h2>翻訳者</h2>
+<table border="1">
+<tr>
+<th>言語</th><th>訳者</th>
+</tr>
+<tr>
+<td>日本語</td><td>庄子 達彦(Tatsu)</td>
+</tr>
+<tr>
+<td>英語</td><td>庄子 達彦(Tatsu)、GodGun968</td>
+</tr>
+<tr>
+<td>韓国語</td><td>Josh Kim</td>
+</tr>
+<tr>
+<td>簡体字中国語</td><td>GodGun968</td>
+</tr>
+</table>
+</div>
+
 
 </body>
 </html>
