--- a/help/en-us/contents/03.html
+++ b/help/en-us/contents/03.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <!--
-Re-Metrics (C) 2012-2017,2020,2021 Tatsuhiko Shoji
+Re-Metrics (C) 2012-2017,2020,2021,2022 Tatsuhiko Shoji
 The sources for Re-Metrics are distributed under the MIT open source license
 -->
 <html>
@@ -19,6 +19,25 @@ The sources for Re-Metrics are distributed under the MIT open source license
 </head>
 <body>
 <h1>3.History</h1>
+
+<div class="chapter">
+<h2>11/06/2022 Version 1.35</h2>
+<h3>Enhancement</h3>
+<ul>
+<li>Add Simplyfied Chinese translation (thanks for GodGun968).</li>
+<li>Improve English translation (thanks for GodGun968).</li>
+</ul>
+</div>
+
+<div class="chapter">
+<h2>09/11/2022 Version 1.34</h2>
+<h3>Enhancement</h3>
+<ul>
+<li>Add Korean translation (thanks for Josh Kim).</li>
+<li>Change language file encoding to UTF-8.</li>
+<li>Add help file fallback.</li>
+</ul>
+</div>
 
 <div class="chapter">
 <h2>11/14/2021 Version 1.33</h2>
