--- a/help/ja-jp/contents/03.html
+++ b/help/ja-jp/contents/03.html
@@ -21,6 +21,25 @@ The sources for Re-Metrics are distributed under the MIT open source license
 <h1>3.製作履歴</h1>
 
 <div class="chapter">
+<h2>2022/11/06 Version 1.35</h2>
+<h3>機能追加</h3>
+<ul>
+<li>簡体字中国語訳を追加しました。(GodGun968様に感謝します。)</li>
+<li>英語訳を追加しました。(GodGun968様に感謝します。)</li>
+</ul>
+</div>
+
+<div class="chapter">
+<h2>2022/09/11 Version 1.34</h2>
+<h3>機能追加</h3>
+<ul>
+<li>韓国語訳を追加しました。(Josh Kim様に感謝します。)</li>
+<li>言語ファイルのエンコーディングをUTF-8としました。</li>
+<li>言語に対応するヘルプファイルがないとき、英語版のヘルプファイルを表示するようにしました。</li>
+</ul>
+</div>
+
+<div class="chapter">
 <h2>2021/11/14 Version 1.33</h2>
 <h3>機能追加</h3>
 <ul>
