--- a/help/en-us/contents/03.html
+++ b/help/en-us/contents/03.html
@@ -21,6 +21,14 @@ The sources for Re-Metrics are distributed under the MIT open source license
 <h1>3.History</h1>
 
 <div class="chapter">
+<h2>08/13/2023 Version 1.36</h2>
+<h3>Enhancement</h3>
+<ul>
+<li>Apply system DPI on selecting preset.</li>
+</ul>
+</div>
+
+<div class="chapter">
 <h2>11/06/2022 Version 1.35</h2>
 <h3>Enhancement</h3>
 <ul>
