--- a/help/ja-jp/contents/03.html
+++ b/help/ja-jp/contents/03.html
@@ -21,6 +21,14 @@ The sources for Re-Metrics are distributed under the MIT open source license
 <h1>3.製作履歴</h1>
 
 <div class="chapter">
+<h2>2023/08/13 Version 1.36</h2>
+<h3>機能追加</h3>
+<ul>
+<li>プリセットにシステムのDPIを反映するようにしました。</li>
+</ul>
+</div>
+
+<div class="chapter">
 <h2>2022/11/06 Version 1.35</h2>
 <h3>機能追加</h3>
 <ul>
